--- a/genindex.html
+++ b/genindex.html
@@ -7272,10 +7272,10 @@
 </li>
       <li><a href="source/evmspec.trace.html#evmspec.trace.create.Result.code">code (evmspec.trace.create.Result attribute)</a>
 </li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.coinbase">coinbase (evmspec.ErigonBlockHeader attribute)</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.coinbase">coinbase (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id150">[1]</a>
 
       <ul>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.coinbase">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.coinbase">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id0">[1]</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.data.BlockNumber.conjugate">conjugate() (evmspec.data.BlockNumber method)</a>
@@ -7501,9 +7501,9 @@
       <ul>
         <li><a href="source/evmspec.html#evmspec.block.MinedBlock.difficulty">(evmspec.block.MinedBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.difficulty">(evmspec.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.difficulty">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id151">[1]</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.difficulty">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.difficulty">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id21">[1]</a>
 </li>
       </ul></li>
   </ul></td>
@@ -9025,9 +9025,9 @@
 </li>
         <li><a href="source/evmspec.html#evmspec.block.ShanghaiCapellaBlock.parentHash">(evmspec.block.ShanghaiCapellaBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.parentHash">(evmspec.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.parentHash">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id152">[1]</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.parentHash">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.parentHash">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id22">[1]</a>
 </li>
       </ul></li>
   </ul></td>
@@ -9264,10 +9264,10 @@
         <li><a href="source/evmspec.html#evmspec.log.Topic.rjust">(evmspec.log.Topic method)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.root">root (evmspec.ErigonBlockHeader attribute)</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.root">root (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id153">[1]</a>
 
       <ul>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.root">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.root">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id23">[1]</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.data.Address.rpartition">rpartition() (evmspec.data.Address method)</a>
@@ -9517,9 +9517,9 @@
 </li>
         <li><a href="source/evmspec.html#evmspec.block.TinyBlock.timestamp">(evmspec.block.TinyBlock attribute)</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.timestamp">(evmspec.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.timestamp">(evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id154">[1]</a>
 </li>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.timestamp">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.timestamp">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id24">[1]</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.block.TinyBlock">TinyBlock (class in evmspec.block)</a>
@@ -9968,10 +9968,10 @@
 </li>
       <li><a href="source/evmspec.trace.html#evmspec.trace.reward.Type.uncle">uncle (evmspec.trace.reward.Type attribute)</a>
 </li>
-      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.uncleHash">uncleHash (evmspec.ErigonBlockHeader attribute)</a>
+      <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.uncleHash">uncleHash (evmspec.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id155">[1]</a>
 
       <ul>
-        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.uncleHash">(evmspec.header.ErigonBlockHeader attribute)</a>
+        <li><a href="source/evmspec.html#evmspec.header.ErigonBlockHeader.uncleHash">(evmspec.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.html#id25">[1]</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.html#evmspec.block.BaseBlock.uncles">uncles (evmspec.block.BaseBlock attribute)</a>
