--- a/_modules/evmspec/header.html
+++ b/_modules/evmspec/header.html
@@ -79,6 +79,18 @@
 <div class="viewcode-block" id="ErigonBlockHeader"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.header.ErigonBlockHeader">[docs]</a><span class="k">class</span> <span class="nc">ErigonBlockHeader</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a block header in the Erigon client.</span>
+
+<span class="sd">    This class is designed to utilize `LazyDictStruct` for handling block header data,</span>
+<span class="sd">    ensuring immutability and strictness to known fields. It is currently under development,</span>
+<span class="sd">    and specific features may not yet be functional. There may be known issues needing resolution.</span>
+
+<span class="sd">    Attributes:</span>
+<span class="sd">        timestamp (UnixTimestamp): The Unix timestamp for when the block was collated.</span>
+<span class="sd">        parentHash (HexBytes): The hash of the parent block.</span>
+<span class="sd">        uncleHash (HexBytes): The hash of the list of uncle headers.</span>
+<span class="sd">        coinbase (Address): The address of the miner who mined the block.</span>
+<span class="sd">        root (HexBytes): The root hash of the state trie.</span>
+<span class="sd">        difficulty (uint): The difficulty level of the block.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">timestamp</span><span class="p">:</span> <span class="n">UnixTimestamp</span>
@@ -88,13 +100,13 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The hash of the parent block.&quot;&quot;&quot;</span>
 
     <span class="n">uncleHash</span><span class="p">:</span> <span class="n">HexBytes</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;The hash of the uncle block.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;The hash of the list of uncle headers.&quot;&quot;&quot;</span>
 
     <span class="n">coinbase</span><span class="p">:</span> <span class="n">Address</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The address of the miner who mined the block.&quot;&quot;&quot;</span>
 
     <span class="n">root</span><span class="p">:</span> <span class="n">HexBytes</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;The root hash of the block.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;The root hash of the state trie.&quot;&quot;&quot;</span>
 
     <span class="n">difficulty</span><span class="p">:</span> <span class="n">uint</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The difficulty level of the block.&quot;&quot;&quot;</span></div>
